# streamlit_test

./: .gitignore  J_minimize.ipynb  all_minimize.ipynb  full_oserver.py  generatore_non_observer.py  minimizer.py  modeling.ipynb  modeling_for_article.ipynb  persys.py  pyproject.toml  requirements.txt  test.ipynb
.devcontainer/: devcontainer.json
