[project]
name = "mat-model-nadya"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=6.30.1",
    "joblib>=1.5.2",
    "jupyter>=1.1.1",
    "nbformat>=5.10.4",
    "numpy>=2.3.3",
    "pandas>=2.3.3",
    "plotly>=6.3.0",
    "plotly-express>=0.4.1",
    "rpds-py>=0.27.1",
    "scikit-learn>=1.7.2",
    "scipy>=1.16.2",
    "streamlit>=1.50.0",
    "sympy>=1.14.0",
    "toolz>=1.0.0",
    "tqdm>=4.67.1",
    "tqdm-joblib>=0.0.5",
]
